committing cancel Cabin changes

--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -204,8 +204,8 @@
 }
 
 .cancel-booking-button {
-  background-color: red;
-  border-color: red;
+  background-color: red !important;
+  border-color: red !important;
   border-radius: 50px;
   padding: 8.5px 24px 8.5px 24px;
   color: white;
