committing issue fix

--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -151,7 +151,7 @@
   }
 
   .booking-participant-body {
-    background: url("../../assest/images/Indium-software-Logo.png");
+    //background: url("../../assest/images/Indium-software-Logo.png");
     background-color: #f5f7ff;
     background-blend-mode: color-burn;
     background-repeat: no-repeat;
