--- a/src/pages/MyBookings/MyBookings.scss
+++ b/src/pages/MyBookings/MyBookings.scss
@@ -103,7 +103,7 @@
     text-align: center;
   }
   .booking-participant-body {
-    background: url("../../assest/images/Indium-software-Logo.png");
+    //background: url("../../assest/images/Indium-software-Logo.png");
     background-color: #f5f7ff;
     background-blend-mode: color-burn;
     background-repeat: no-repeat;
