committing Cabin changes

--- a/src/pages/NewBooking/CabinBooking/cabinBooking.scss
+++ b/src/pages/NewBooking/CabinBooking/cabinBooking.scss
@@ -15,9 +15,15 @@
     padding: 10px;
     align-items: center;
 }
-.cabin-footer-container .find-button{
+
+.cabin-footer-container .find-button {
     margin-right: 10px;
 }
-.cabin-footer-container .see-details-text{
+
+.cabin-footer-container .see-details-text {
     color: blue;
+}
+
+.facility.inputBox {
+    width: 15rem !important;
 }
