--- a/src/pages/MyBookings/MyBookings.scss
+++ b/src/pages/MyBookings/MyBookings.scss
@@ -4,7 +4,7 @@
   font-family: "lato-Medium";
   margin-top: 4% !important;
   padding-left: 2%;
-  .home-newbooking-btn {
+  .home-conferenceRoombooking-btn {
     justify-content: end;
   }
   .hr {
