--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -5,7 +5,7 @@
   margin-top: 4% !important;
   padding-left: 2%;
 
-  .home-newbooking-btn {
+  .home-conferenceRoombooking-btn {
     justify-content: end;
   }
 
