--- a/src/pages/Layout/Header/header.scss
+++ b/src/pages/Layout/Header/header.scss
@@ -27,6 +27,13 @@
    display: flex;
    justify-content: flex-end;
 }
+.header-cabinbooking-btn{
+
+   display: flex;
+
+   justify-content:space-evenly;
+
+}
 .booking-icon {
    width: 154px;
    height: 40px;
