--- a/src/pages/CabinBooking/cabinBooking.scss
+++ b/src/pages/CabinBooking/cabinBooking.scss
@@ -8,100 +8,240 @@
   padding-top: 15px;
   margin-top: 1rem;
 }
-.inputBox {
-  border: none;
-  border-radius: 5px;
-  background-color: white;
-  width: 12rem;
-  border: 1px solid #dededf;
-  border-radius: 4px;
-  text-align: left;
-  height: 30px;
-}
-
-.find-button {
-  border-radius: 1.5rem !important;
-  border: none !important;
-  box-shadow: 0px 0px 3px 0px rgba(143, 209, 199, 0.757) !important;
-  height: 40px;
-  font-size: initial;
-  font-family: "lato-Medium";
-  background-color: #f06a3e !important;
-  color: white;
-}
 
 
-.msl-option-active {
-  color: #f06a3e !important;
-  background-color: white !important;
-  background-image: url("../../assest/images/member_selected.png") !important;
-  background-size: 20px !important;
-  background-repeat: no-repeat !important;
-  background-position-y: center !important ;
+.mandate-item {
+  color: red;
 }
-.msl-option {
-  background-image: url("../../assest/images/employee.png");
-  color: #9c9c9c;
-  background-size: 20px !important;
-  background-repeat: no-repeat !important;
-  background-position-y: center !important ;
-  border-bottom: 2px solid whitesmoke;
-  border-width: 150%;
-  box-shadow: none !important;
-}
-.msl-chip {
-  display: none !important;
-}
-.msl-active ~ .msl-options {
-  max-height: 300px !important;
-}
-
-.custom-input {
-  width: 400%;
-}
-.floor-label {
-  padding-left: 40%;
-}
-
 .tooltip > div.tooltip-inner {
   background-color: #2f3c7f !important;
 }
 .custom-input {
-  padding-top: 0.25rem;
+
+padding-top: 0.25rem;
   padding-bottom: 0.25rem;
   padding-left: 0.5rem;
-  font-size: 0.875rem;
-  //border-radius: .2rem;
-  border: 1px solid #ced4da;
+  font-size: .875rem;
+  border-radius: 0.2rem;
+border: 1px solid #ced4da;
+width: 400%;
+
+
+
 }
 .custom-input:focus {
-  outline: none;
-  border: 1px solid #ffffff;
-  box-shadow: 0 0 10px 2px #8fb9dd;
-}
-.custom-output {
-  max-width: 500px;
-  margin: 20rem auto;
+ outline: none;
+border: 1px solid #617383;
+box-shadow: 0 0 5px 2px #88acdb; 
 }
 .accordion {
-  max-width: 600px;
-  margin: 2rem auto;
+max-width: 800px;
+margin: 2rem auto;
 }
 .accordion-title {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  cursor: pointer;
-  background-color: #ffffff;
+display: flex;
+flex-direction: row;
+justify-content: space-between;
+cursor: pointer;
+background-color: #ffffff;
 }
 .accordion-title:hover {
-  background-color: #ffffff;
+background-color: #ffffff;
 }
 
 .accordion-title,
 .accordion-content {
-  padding: 1rem;
+padding: 1rem;
 }
+
 .accordion-content {
-  background-color: #a1d9f5;
+background-color: #a1d9f5;
+}
+
+
+.spacetype-radio {
+font-family: "lato-bold";
+font-size: 16px;
+
+}
+
+.seat-toolbar-block {
+span {
+  font-family: "lato-Medium";
+  font-size: 14px;
+  color: #191919;
+}
+.box {
+  height: 12px;
+  width: 12px;
+  margin-top: 5px;
+  margin-right: 5px;
+}
+
+// .booking-available {
+//   background-color: #ffffff;
+//   border: 1px solid #21ba45;
+//   border-radius: 3px;
+// }
+
+// .booking-selected-seats {
+//   background-color: #21ba45;
+//   border: 1px solid #21ba45;
+//   border-radius: 3px;
+// }
+
+//   .booking-booked-seats {
+//     background-color: #dddddd;
+//     border: 1px solid #dddddd;
+//     border-radius: 3px;
+//   }
+}
+
+
+// .morning{
+//   display: flex;
+//   overflow: hidden;
+// }
+// .morning li{
+//   float: left;
+//   text-align: center;
+//   text-decoration: none;
+//   margin-left:50px;
+//   display: block;
+//   margin-top: 30px;
+// }
+
+// .floor{
+//   display: block;
+//   overflow: hidden;
+// }
+// .floor li{
+//   text-decoration: none;
+// padding: 2px 16px;
+// margin-left: -30px;
+// display: block;
+// }
+// .container{
+// display: block;
+// //position: relative;
+// cursor: pointer;
+// }
+// .container input{
+//   //position:absolute;
+//   opacity: 0;
+//   cursor: pointer;
+// }
+// .checkbox{
+//   background-color: red;
+//   height: 10px;
+//   width: 10px;
+// }
+
+
+// .con label{
+//   position: relative;
+//   padding-left: 10px;
+//   margin-top: 10px;
+//   cursor: pointer;
+// }
+// .con span{
+//   padding-left: 45px;
+
+
+// }
+// .App {
+//   width: 100%;
+//   height: 100vh;
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+// }
+
+// table {
+//   border: 2px solid forestgreen;
+//   width: 800px;
+//   height: 100px;
+// }
+
+// th {
+//   border-bottom: 1px solid black;
+// }
+
+// td {
+//   text-align: center;
+// }
+
+.footer {
+background: #ffffff;
+width: 100%;
+margin-bottom: -20px;
+}
+.button1{
+margin-top: -0.5px;
+}
+
+.button2 {
+margin-left: 550px;
+}
+.button3{
+margin-left: 650px;
+
+}
+
+.booking-participant-modal {
+font-family: "lato-bold";
+.participant-model-title {
+  background-color: #4557b3;
+  color: #fdf8f6;
+}
+.participant-model-header {
+  background-color: #f06a3e;
+  color: #fdf8f6;
+}
+.model-close-button {
+  text-align: center;
+}
+.booking-participant-body {
+  background: url("../../assest/images/Indium-software-Logo.png");
+  background-color: #f5f7ff;
+  background-blend-mode: color-burn;
+  background-repeat: no-repeat;
+  background-position-x: right;
+  background-position-y: bottom;
+  width: 100%;
+}
+.booking-participant-table {
+  background-color: transparent;
+}
+.footer-block {
+  margin: 0px;
+  padding: 10px;
+  background-color: #f5f7ff;
+}
+.booked-by-col {
+  font-family: "lato-heavy";
+  color: #0a1656;
+}
+.booked-by-row {
+  padding: 15px;
+}
+.modal-close-btn {
+  outline: none;
+  box-shadow: none;
+  border: none;
+  font-size: 25px;
+  color: white;
+}
+.close-btn {
+  border-radius: 50px;
+  width: 20%;
+}
+.close-btn:hover {
+  color: #fff;
+  background-color: #dc3545;
+  border-color: #dc3545;
+}
+.close-btn:focus {
+  background-color: #dc3545;
+}
 }
