cabin UI commited

--- a/src/pages/Layout/Header/header.scss
+++ b/src/pages/Layout/Header/header.scss
@@ -23,9 +23,13 @@
 #icon_text {
    padding-left: 10px;
 }
-.header-newbooking-btn{
+.header-conferenceRoombooking-btn{
    display: flex;
-   justify-content: flex-end;
+   justify-content:flex-end;
+}
+.header-cabinbooking-btn{
+   display: flex;
+   justify-content:space-evenly;
 }
 .booking-icon {
    width: 154px;
@@ -41,6 +45,7 @@
    box-shadow: none;
    outline: none;
  }
+ 
  .booking-icon:hover {
    background-color: #f06a3e;
    color: white;
